[gd_scene load_steps=2 format=3 uid="uid://b8m3n6qaq2r5s"]

[ext_resource type="Script" path="res://scripts/ui/task_completion_popup.gd" id="1_completion"]

[node name="TaskCompletionPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_completion")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="PopupPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PopupPanel"]
layout_mode = 2

[node name="Header" type="Label" parent="PopupPanel/VBox"]
layout_mode = 2
text = "TASK COMPLETED!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PopupPanel/VBox"]
layout_mode = 2

[node name="TaskNameLabel" type="Label" parent="PopupPanel/VBox"]
layout_mode = 2
text = "Task Name Here"
horizontal_alignment = 1

[node name="TaskDescLabel" type="Label" parent="PopupPanel/VBox"]
layout_mode = 2
text = "Task description here"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer1" type="Control" parent="PopupPanel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StarRewardLabel" type="Label" parent="PopupPanel/VBox"]
layout_mode = 2
text = "★ +0.5 STARS!"
horizontal_alignment = 1

[node name="StarChangeLabel" type="Label" parent="PopupPanel/VBox"]
layout_mode = 2
text = "★★★☆☆ → ★★★★☆"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="PopupPanel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="UnlocksHeader" type="Label" parent="PopupPanel/VBox"]
layout_mode = 2
text = "UNLOCKED:"
horizontal_alignment = 1

[node name="UnlocksLabel" type="RichTextLabel" parent="PopupPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
bbcode_enabled = true
text = "[center]Unlocks list here[/center]"
fit_content = true
scroll_active = false

[node name="Spacer3" type="Control" parent="PopupPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonHBox" type="HBoxContainer" parent="PopupPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="AwesomeButton" type="Button" parent="PopupPanel/VBox/ButtonHBox"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Awesome!"

[node name="ViewUnlocksButton" type="Button" parent="PopupPanel/VBox/ButtonHBox"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "View Unlocks"
